# madrona_mjx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mjx_brax_quadruped_policy  pyproject.toml
data/: cartpole.xml
docs/: INTEGRATION.md  MADRONA.md  WALKTHROUGH.md
scripts/: aloha_env.py  benchmark.py  create_aloha_example.sh  create_franka_example.sh  debug.py  headless.py  mjx_aloha_demo.py  mjx_aloha_demo_viewer.py  mjx_asset_dump.py  mjx_env.py  mjx_policy.py  sim.py  train_cartpole.py  viewer.py
src/: CMakeLists.txt  bindings.cpp  geometry.hpp  mgr.cpp  mgr.hpp  sim.cpp  sim.hpp  types.hpp  viewer.cpp
src/madrona_mjx/: __init__.py  renderer.py  viz.py  wrapper.py
