[build-system]
requires = []
build-backend = "madrona-py-build"
backend-path = ["external/madrona/py"]

[project]
name = "madrona_mjx"
version = "0.0.1"

[tool.madrona.packages.madrona_mjx_sim]
ext-only = true
ext-out-dir = "build"

[tool.madrona.packages.madrona_mjx_viz]
ext-only = true
ext-out-dir = "build"
