[build-system]
requires = []
build-backend = "madrona-py-build"
backend-path = ["external/madrona/py"]

[project]
name = "madrona_mjx"
version = "0.0.1"

[tool.madrona.packages.madrona_mjx]
path = "src/madrona_mjx"
ext-out-dir = "build"
extensions = [ "_madrona_mjx_batch_renderer", "_madrona_mjx_visualizer" ]

[tool.isort]
force_single_line = true
force_sort_within_sections = true
lexicographical = true
single_line_exclusions = ["typing"]
order_by_type = false
group_by_package = true
line_length = 120
use_parentheses = true
multi_line_output = 3
include_trailing_comma = true
skip = ["mujoco_menagerie"]
skip_glob = ["**/*.ipynb"]

[tool.pyink]
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true
extend-exclude = '''(
 mujoco_menagerie
 | .ipynb$
)'''
